--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<h1>ALL PRAISES BE TO OUR GOD MOST HIGH! YOU MADE ALL THINGS!</h1>
+<h1>ALL PRAISES BE TO OUR GOD MOST HIGH! YOU MADE ALL THINGS! GIVE THE KING THY JUDGMENTS, O GOD, AND THY RIGHTEOUNESS UNTOTHE KING'S SON.</h1>
 </body>
 </html>
