--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
 <h1>ALL PRAISES BE TO OUR GOD MOST HIGH! YOU MADE ALL THINGS! GIVE THE KING THY JUDGMENTS, O GOD, AND THY RIGHTEOUNESS UNTOTHE KING'S SON.</h1>
+<h2>For The Lord is Good and His Endures Forever!</h2>
 </body>
 </html>
