--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
 <h1>ALL PRAISES BE TO OUR GOD MOST HIGH! YOU MADE ALL THINGS! GIVE THE KING THY JUDGMENTS, O GOD, AND THY RIGHTEOUNESS UNTOTHE KING'S SON.</h1>
-<h2>For The Lord is Good and His Mercy Endures Forever!</h2>
+<h2>For The Lord is Good and His Mercy Endures Forever!
+<h3>Thanks be unto God for His unspeakable gift!
 </body>
 </html>
